--- a/.gitignore
+++ b/.gitignore
@@ -1,31 +1,25 @@
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
 # dependencies
 /node_modules
 /.pnp
 .pnp.js
-package-lock.json
 
 # testing
 /coverage
 
-# next.js
-/.next/
-/out/
-
 # production
+/build
 /dist
 
 # misc
 .DS_Store
-.env*
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 yarn.lock
-
-# Editors
-**/.idea
-.vscode
-.idea
-
