--- a/.yarnrc
+++ b/.yarnrc
@@ -1,1 +1,4 @@
-registry "https://registry.npm.taobao.org"
+omit.js "https://registry.npmjs.org/omit.js"
+"@kkb:registry" "https://registry-npm.kaikeba.com"
+"@ant-design:registry" "https://registry.npm.taobao.org"
+registry "http://vd.kaikeba.com"
