--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
-  "name": "npmbase",
-  "version": "v0.0.1",
+  "name": "@kkb/homecommon",
+  "version": "0.0.1",
   "description": "",
-  "main": "./dist/index.js",
+  "main": "./dist/main.js",
+  "publishConfig": {
+    "registry": "https://registry-npm.kaikeba.com/"
+  },
   "scripts": {
     "start": "npm run dev",
     "build": "rimraf dist && npm run build:prod && npm run build:win",
@@ -17,7 +20,7 @@
     "report",
     "light"
   ],
-  "author": "zzq",
+  "author": "starkwang",
   "license": "ISC",
   "lint-staged": {
     "*.{js}": [
@@ -29,6 +32,7 @@
   "devDependencies": {
     "@babel/core": "^7.7.2",
     "@babel/preset-env": "^7.7.1",
+    "@babel/preset-react": "^7.10.4",
     "@babel/preset-typescript": "^7.10.4",
     "autoprefixer": "^9.7.3",
     "babel-loader": "^8.1.0",
@@ -38,21 +42,30 @@
     "eslint": "^7.3.1",
     "eslint-plugin-import": "^2.22.0",
     "exports-loader": "^0.7.0",
+    "fig-pxtorem": "^0.0.1",
+    "friendly-errors-webpack-plugin": "^1.7.0",
     "html-webpack-plugin": "^3.2.0",
+    "postcss-flexbugs-fixes": "^4.2.1",
+    "postcss-normalize": "^9.0.0",
+    "postcss-preset-env": "^6.7.0",
     "regenerator-runtime": "^0.13.3",
     "rimraf": "^3.0.2",
     "typescript": "^3.9.5",
     "uglifyjs-webpack-plugin": "^2.2.0",
-    "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.10",
+    "webpack": "^4.44.1",
+    "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0",
-    "webpack-merge": "^4.2.2"
+    "webpack-merge": "^4.2.2",
+    "webpackbar": "^4.0.0"
   },
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.10.4",
     "@babel/plugin-proposal-object-rest-spread": "^7.11.0",
     "@kkb/fig-report": "^0.0.21",
     "axios": "^0.19.2",
+    "mini-css-extract-plugin": "^0.11.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "terser-webpack-plugin": "^3.0.6"
   }
 }
