--- a/package.json
+++ b/package.json
@@ -34,13 +34,26 @@
     "@babel/preset-env": "^7.7.1",
     "@babel/preset-react": "^7.10.4",
     "@babel/preset-typescript": "^7.10.4",
+    "@typescript-eslint/eslint-plugin": "^4.9.0",
     "autoprefixer": "^9.7.3",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "compression-webpack-plugin": "^4.0.0",
     "cross-env": "^6.0.3",
     "eslint": "^7.3.1",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-airbnb-typescript": "^12.0.0",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-formatter-pretty": "^4.0.0",
+    "eslint-plugin-babel": "^5.3.1",
+    "eslint-plugin-compat": "^3.8.0",
+    "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jest": "^24.1.3",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-promise": "^4.2.1",
     "exports-loader": "^0.7.0",
     "fig-pxtorem": "^0.0.1",
     "friendly-errors-webpack-plugin": "^1.7.0",
@@ -50,13 +63,13 @@
     "postcss-preset-env": "^6.7.0",
     "regenerator-runtime": "^0.13.3",
     "rimraf": "^3.0.2",
-    "typescript": "^3.9.5",
+    "typescript": "^4.1.2",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0",
     "webpack-merge": "^4.2.2",
-    "webpackbar": "^4.0.0"
+    "webpackbar": "^5.0.0-3"
   },
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.10.4",
