--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,26 @@
 {
-  "include": ["src"],
   "compilerOptions": {
-    "module": "commonjs",
-    "lib": ["dom", "ES5", "es2015", "es2015.promise"],
-    "noImplicitAny": true,
-    "removeComments": true,
-    "preserveConstEnums": true,
     "outDir": "dist",
-    "target": "ES5",
-    "allowJs": true, // 允许编译javascript文件
+    "module": "esnext",
+    "target": "esnext",
+    "lib": ["esnext", "dom"],
     "sourceMap": true,
-    "suppressImplicitAnyIndexErrors": true
+    "baseUrl": ".",
+    "jsx": "react",
+    "allowSyntheticDefaultImports": true,
+    "moduleResolution": "node",
+    "forceConsistentCasingInFileNames": true,
+    "noImplicitReturns": true,
+    "suppressImplicitAnyIndexErrors": true,
+    "noUnusedLocals": true,
+    "allowJs": true,
+    "skipLibCheck": true,
+    "experimentalDecorators": true,
+    "strict": true
   },
   "paths": {
-    "@/*": ["src/*"]
+    "@/*": ["./src/*"]
   },
-  "exclude": ["node_modules"],
-  "typeRoots": ["node_modules/@types"]
+  "typeRoots": ["node_modules/@types"],
+  "exclude": ["node_modules", "build", "dist", "scripts", "src/.umi/*", "webpack", "jest"]
 }
