--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
   },
   "scripts": {
     "start": "npm run dev",
+    "dev": "cross-env BUILD_ENV=prod webpack serve --config=./config/webpack.common.js",
+    "dev:watch": "cross-env BUILD_ENV=dev webpack --watch --config=./config/webpack.common.js",
     "build": "rimraf build && npm run build:prod && npm run build:win",
     "build:prod": "cross-env BUILD_ENV=prod webpack --config=./config/webpack.common.js",
     "build:win": "cross-env BUILD_ENV=win webpack --config=./config/webpack.common.js",
-    "dev": "cross-env BUILD_ENV=dev webpack serve --open --config=./config/webpack.common.js",
     "pub": "npm publish",
     "prepublish": "npm run build",
     "test": "cross-env BUILD_ENV=test webpack --config=./config/webpack.common.js"
