--- a/package.json
+++ b/package.json
@@ -44,13 +44,16 @@
     "@babel/preset-env": "^7.7.1",
     "@babel/preset-react": "^7.10.4",
     "@babel/preset-typescript": "^7.10.4",
+    "@types/react": "^17.0.0",
     "@typescript-eslint/eslint-plugin": "^4.9.0",
+    "@typescript-eslint/parser": "^4.9.0",
     "autoprefixer": "^9.7.3",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "compression-webpack-plugin": "^4.0.0",
     "cross-env": "^6.0.3",
+    "css-loader": "^5.0.1",
     "eslint": "^7.3.1",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-airbnb-base": "^14.2.1",
@@ -64,11 +67,17 @@
     "eslint-plugin-jest": "^24.1.3",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-unicorn": "^23.0.0",
     "exports-loader": "^0.7.0",
     "fig-pxtorem": "^0.0.1",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "html-webpack-plugin": "^4.5.0",
+    "less": "^3.12.2",
+    "less-loader": "5",
     "postcss-flexbugs-fixes": "^4.2.1",
+    "postcss-loader": "^4.1.0",
     "postcss-normalize": "^9.0.0",
     "postcss-preset-env": "^6.7.0",
     "regenerator-runtime": "^0.13.3",
@@ -83,11 +92,12 @@
     "webpackbar": "^5.0.0-3"
   },
   "dependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.10.4",
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
     "@babel/plugin-proposal-object-rest-spread": "^7.11.0",
     "@kkb/fig-report": "^0.0.21",
+    "@monaco-editor/react": "^3.7.1",
     "axios": "^0.21.0",
-    "mini-css-extract-plugin": "^0.11.1",
+    "mini-css-extract-plugin": "^1.3.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   }
