--- a/package.json
+++ b/package.json
@@ -40,21 +40,10 @@
     "react": "^16.x.x || ^17.x.x"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@babel/plugin-proposal-class-properties": "^7.12.1",
-    "@babel/plugin-proposal-object-rest-spread": "^7.11.0",
-    "@babel/preset-env": "^7.12.7",
-    "@babel/preset-react": "^7.12.7",
-    "@babel/preset-typescript": "^7.12.7",
-    "@types/react": "^17.0.0",
     "@typescript-eslint/eslint-plugin": "^4.9.0",
-    "autoprefixer": "^9.7.3",
-    "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "compression-webpack-plugin": "^4.0.0",
     "cross-env": "^6.0.3",
-    "css-loader": "^5.0.1",
     "eslint": "^7.3.1",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-airbnb-base": "^14.2.1",
@@ -71,17 +60,6 @@
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-unicorn": "^23.0.0",
-    "exports-loader": "^0.7.0",
-    "fig-pxtorem": "^0.0.1",
-    "friendly-errors-webpack-plugin": "^1.7.0",
-    "html-webpack-plugin": "^4.5.0",
-    "less": "^3.12.2",
-    "less-loader": "5",
-    "mini-css-extract-plugin": "^1.3.2",
-    "postcss-flexbugs-fixes": "^4.2.1",
-    "postcss-loader": "^4.1.0",
-    "postcss-normalize": "^9.0.0",
-    "postcss-preset-env": "^6.7.0",
     "regenerator-runtime": "^0.13.3",
     "rimraf": "^3.0.2",
     "terser-webpack-plugin": "^5.0.3",
@@ -94,8 +72,32 @@
     "webpackbar": "^5.0.0-3"
   },
   "dependencies": {
+    "@babel/core": "^7.12.9",
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
+    "@babel/plugin-proposal-object-rest-spread": "^7.11.0",
+    "@babel/plugin-transform-runtime": "^7.12.1",
+    "@babel/polyfill": "^7.12.1",
+    "@babel/preset-env": "^7.12.7",
+    "@babel/preset-react": "^7.12.7",
+    "@babel/preset-typescript": "^7.12.7",
     "@monaco-editor/react": "^3.7.1",
+    "@types/react": "^17.0.0",
+    "autoprefixer": "^9.7.3",
     "axios": "^0.21.0",
+    "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.1.0",
+    "css-loader": "^5.0.1",
+    "fig-pxtorem": "^0.0.1",
+    "friendly-errors-webpack-plugin": "^1.7.0",
+    "html-webpack-plugin": "^4.5.0",
+    "less": "^3.12.2",
+    "less-loader": "5",
+    "mini-css-extract-plugin": "^1.3.2",
+    "postcss": "^8.1.14",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-loader": "^4.1.0",
+    "postcss-normalize": "^9.0.0",
+    "postcss-preset-env": "^6.7.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   }
