--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@kkb/zzq",
+  "name": "@kkb/demo",
   "version": "0.0.1",
   "description": "",
   "publishConfig": {
@@ -8,7 +8,7 @@
   "scripts": {
     "start": "npm run dev",
     "dev": "cross-env BUILD_ENV=dev webpack serve",
-    "dev:watch": "cross-env BUILD_ENV=dev webpack --watch",
+    "dev:watch": "cross-env BUILD_ENV=prod webpack --watch",
     "build": "rimraf build && npm run build:prod && npm run build:win",
     "build:prod": "cross-env BUILD_ENV=prod webpack",
     "build:win": "cross-env BUILD_ENV=win webpack",
@@ -37,9 +37,11 @@
     ]
   },
   "peerDependencies": {
-    "react": "^16.x.x || ^17.x.x"
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0"
   },
   "devDependencies": {
+    "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@typescript-eslint/eslint-plugin": "^4.9.0",
     "clean-webpack-plugin": "^3.0.0",
@@ -66,6 +68,8 @@
     "postcss-loader": "^4.1.0",
     "postcss-normalize": "^9.0.0",
     "postcss-preset-env": "^6.7.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "regenerator-runtime": "^0.13.3",
     "rimraf": "^3.0.2",
     "terser-webpack-plugin": "^5.0.3",
@@ -86,8 +90,7 @@
     "@babel/preset-env": "^7.12.7",
     "@babel/preset-react": "^7.12.7",
     "@babel/preset-typescript": "^7.12.7",
-    "@monaco-editor/react": "^3.7.1",
-    "@types/react": "^17.0.0",
+    "@monaco-editor/react": "^3.7.2",
     "autoprefixer": "^9.7.3",
     "axios": "^0.21.0",
     "babel-eslint": "^10.1.0",
@@ -99,7 +102,7 @@
     "less": "^3.12.2",
     "less-loader": "5",
     "mini-css-extract-plugin": "^1.3.2",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "prop-types": "^15.7.2",
+    "state-local": "^1.0.4"
   }
 }
