--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
   "scripts": {
     "start": "npm run dev",
     "dev": "cross-env BUILD_ENV=dev webpack serve",
-    "dev:watch": "cross-env BUILD_ENV=prod webpack --watch",
     "build": "rimraf build && npm run build:prod && npm run build:win",
+    "build:watch": "cross-env BUILD_ENV=prod TYPE_ENV=link webpack --watch",
+    "build:link": "rimraf build && cross-env BUILD_ENV=prod TYPE_ENV=link webpack",
     "build:prod": "cross-env BUILD_ENV=prod webpack",
     "build:win": "cross-env BUILD_ENV=win webpack",
     "pub": "npm publish",
@@ -37,8 +38,8 @@
     ]
   },
   "peerDependencies": {
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0"
+    "react": ">=16.8.0",
+    "react-dom": ">=16.8.0"
   },
   "devDependencies": {
     "@types/react": "^17.0.0",
@@ -63,6 +64,7 @@
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-unicorn": "^23.0.0",
+    "filemanager-webpack-plugin": "^3.0.0-beta.0",
     "postcss": "^8.1.14",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-loader": "^4.1.0",
@@ -95,6 +97,7 @@
     "axios": "^0.21.0",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
+    "copy-webpack-plugin": "^6.3.2",
     "css-loader": "^5.0.1",
     "fig-pxtorem": "^0.0.1",
     "friendly-errors-webpack-plugin": "^1.7.0",
