--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "module": "./build/index.js",
   "keywords": [],
   "author": {
-    "name": "zzq",
+    "name": "tec",
     "email": "zzq8297729@163.com",
     "url": "https://www.jonhuu.com"
   },
@@ -45,6 +45,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@typescript-eslint/eslint-plugin": "^4.9.0",
+    "bundle-dts": "^1.1.4",
     "clean-webpack-plugin": "^3.0.0",
     "compression-webpack-plugin": "^4.0.0",
     "cross-env": "^6.0.3",
