--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "build:link": "rimraf build && cross-env BUILD_ENV=prod TYPE_ENV=link webpack",
     "build:prod": "cross-env BUILD_ENV=prod webpack",
     "build:win": "cross-env BUILD_ENV=win webpack",
+    "tsc": "tsc",
     "pub": "npm publish",
     "prepublish": "npm run build",
     "test": "cross-env BUILD_ENV=test webpack",
@@ -42,10 +43,23 @@
     "react-dom": ">=16.8.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.12.9",
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
+    "@babel/plugin-proposal-object-rest-spread": "^7.11.0",
+    "@babel/plugin-transform-runtime": "^7.12.1",
+    "@babel/polyfill": "^7.12.1",
+    "@babel/preset-env": "^7.12.7",
+    "@babel/preset-react": "^7.12.7",
+    "@babel/preset-typescript": "^7.12.7",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@typescript-eslint/eslint-plugin": "^4.9.0",
+    "autoprefixer": "^9.7.3",
+    "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.1.0",
     "bundle-dts": "^1.1.4",
+    "copy-webpack-plugin": "^6.3.2",
+    "css-loader": "^5.0.1",
     "clean-webpack-plugin": "^3.0.0",
     "compression-webpack-plugin": "^4.0.0",
     "cross-env": "^6.0.3",
@@ -65,7 +79,13 @@
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-unicorn": "^23.0.0",
+    "fig-pxtorem": "^0.0.1",
+    "friendly-errors-webpack-plugin": "^1.7.0",
     "filemanager-webpack-plugin": "^3.0.0-beta.0",
+    "html-webpack-plugin": "^4.5.0",
+    "less": "^3.12.2",
+    "less-loader": "5",
+    "mini-css-extract-plugin": "^1.3.2",
     "postcss": "^8.1.14",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-loader": "^4.1.0",
@@ -76,6 +96,7 @@
     "regenerator-runtime": "^0.13.3",
     "rimraf": "^3.0.2",
     "terser-webpack-plugin": "^5.0.3",
+    "ts-loader": "^8.0.11",
     "typescript": "^4.1.2",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^5.10.0",
@@ -85,28 +106,6 @@
     "webpackbar": "^5.0.0-3"
   },
   "dependencies": {
-    "@babel/core": "^7.12.9",
-    "@babel/plugin-proposal-class-properties": "^7.12.1",
-    "@babel/plugin-proposal-object-rest-spread": "^7.11.0",
-    "@babel/plugin-transform-runtime": "^7.12.1",
-    "@babel/polyfill": "^7.12.1",
-    "@babel/preset-env": "^7.12.7",
-    "@babel/preset-react": "^7.12.7",
-    "@babel/preset-typescript": "^7.12.7",
-    "@monaco-editor/react": "^3.7.2",
-    "autoprefixer": "^9.7.3",
-    "axios": "^0.21.0",
-    "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.1.0",
-    "copy-webpack-plugin": "^6.3.2",
-    "css-loader": "^5.0.1",
-    "fig-pxtorem": "^0.0.1",
-    "friendly-errors-webpack-plugin": "^1.7.0",
-    "html-webpack-plugin": "^4.5.0",
-    "less": "^3.12.2",
-    "less-loader": "5",
-    "mini-css-extract-plugin": "^1.3.2",
-    "prop-types": "^15.7.2",
-    "state-local": "^1.0.4"
+    "@monaco-editor/react": "^3.7.2"
   }
 }
