--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "main": "./build/index.js",
   "module": "./build/index.js",
+  "types": "./build/index.d.ts",
   "keywords": [],
   "author": {
     "name": "tec",
@@ -58,11 +59,11 @@
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
     "bundle-dts": "^1.1.4",
-    "copy-webpack-plugin": "^6.3.2",
-    "css-loader": "^5.0.1",
     "clean-webpack-plugin": "^3.0.0",
     "compression-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^6.3.2",
     "cross-env": "^6.0.3",
+    "css-loader": "^5.0.1",
     "eslint": "^7.3.1",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-airbnb-base": "^14.2.1",
@@ -80,8 +81,8 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-unicorn": "^23.0.0",
     "fig-pxtorem": "^0.0.1",
-    "friendly-errors-webpack-plugin": "^1.7.0",
     "filemanager-webpack-plugin": "^3.0.0-beta.0",
+    "friendly-errors-webpack-plugin": "^1.7.0",
     "html-webpack-plugin": "^4.5.0",
     "less": "^3.12.2",
     "less-loader": "5",
