--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dev": "cross-env BUILD_ENV=dev webpack serve",
     "build": "rimraf build && npm run build:prod && npm run build:win",
     "build:watch": "cross-env BUILD_ENV=prod TYPE_ENV=link webpack --watch",
-    "build:link": "rimraf build && cross-env BUILD_ENV=prod TYPE_ENV=link webpack",
+    "build:link": "cross-env BUILD_ENV=prod TYPE_ENV=link webpack",
     "build:prod": "cross-env BUILD_ENV=prod webpack",
     "build:win": "cross-env BUILD_ENV=win webpack",
     "tsc": "tsc",
@@ -61,8 +61,8 @@
     "bundle-dts": "^1.1.4",
     "clean-webpack-plugin": "^3.0.0",
     "compression-webpack-plugin": "^4.0.0",
-    "copy-webpack-plugin": "^6.3.2",
-    "cross-env": "^6.0.3",
+    "copy-webpack-plugin": "^6.4.0",
+    "cross-env": "^7.0.3",
     "css-loader": "^5.0.1",
     "eslint": "^7.3.1",
     "eslint-config-airbnb": "^18.2.1",
