--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,7 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["src/**/*", "src/typings"],
+  "include": ["src/**/*"],
   "typeRoots": ["node_modules/@types"],
   "exclude": [
     "node_modules",
