--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "build:link": "cross-env BUILD_ENV=prod TYPE_ENV=link webpack",
     "build:prod": "cross-env BUILD_ENV=prod webpack",
     "build:win": "cross-env BUILD_ENV=win webpack",
+    "build:ana": "cross-env ANA_TYPE=true BUILD_ENV=prod webpack",
     "tsc": "tsc",
     "pub": "npm publish",
     "prepublish": "npm run build",
@@ -100,10 +101,11 @@
     "ts-loader": "^8.0.11",
     "typescript": "^4.1.2",
     "uglifyjs-webpack-plugin": "^2.2.0",
-    "webpack": "^5.10.0",
+    "webpack": "^5.10.2",
+    "webpack-bundle-analyzer": "^4.2.0",
     "webpack-cli": "^4.2.0",
     "webpack-dev-server": "^3.11.0",
-    "webpack-merge": "^5.4.0",
+    "webpack-merge": "^5.7.0",
     "webpackbar": "^5.0.0-3"
   },
   "dependencies": {
