--- a/package.json
+++ b/package.json
@@ -14,10 +14,7 @@
     "build:prod": "cross-env BUILD_ENV=prod webpack",
     "build:win": "cross-env BUILD_ENV=win webpack",
     "build:ana": "cross-env ANA_TYPE=true BUILD_ENV=prod webpack",
-    "tsc": "tsc",
-    "pub": "npm publish",
-    "prepublish": "npm run build",
-    "test": "cross-env BUILD_ENV=test webpack",
+    "prepublish": "npm run build:prod",
     "tags": "git tag v5.0.2 && git push origin --tags"
   },
   "main": "./build/index.js",
@@ -84,7 +81,7 @@
     "fig-pxtorem": "^0.0.1",
     "filemanager-webpack-plugin": "^3.0.0-beta.0",
     "friendly-errors-webpack-plugin": "^1.7.0",
-    "html-webpack-plugin": "^4.5.0",
+    "html-webpack-plugin": "^5.0.0-beta.1",
     "less": "^3.12.2",
     "less-loader": "5",
     "mini-css-extract-plugin": "^1.3.2",
@@ -101,7 +98,7 @@
     "ts-loader": "^8.0.11",
     "typescript": "^4.1.2",
     "uglifyjs-webpack-plugin": "^2.2.0",
-    "webpack": "^5.10.2",
+    "webpack": "^5.11.0",
     "webpack-bundle-analyzer": "^4.2.0",
     "webpack-cli": "^4.2.0",
     "webpack-dev-server": "^3.11.0",
