--- a/package.json
+++ b/package.json
@@ -78,7 +78,6 @@
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-unicorn": "^23.0.0",
-    "fig-pxtorem": "^0.0.1",
     "filemanager-webpack-plugin": "^3.0.0-beta.0",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "html-webpack-plugin": "^5.0.0-beta.1",
@@ -90,8 +89,6 @@
     "postcss-loader": "^4.1.0",
     "postcss-normalize": "^9.0.0",
     "postcss-preset-env": "^6.7.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
     "regenerator-runtime": "^0.13.3",
     "rimraf": "^3.0.2",
     "terser-webpack-plugin": "^5.0.3",
@@ -106,6 +103,7 @@
     "webpackbar": "^5.0.0-3"
   },
   "dependencies": {
-    "@monaco-editor/react": "^3.7.2"
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
   }
 }
