feat: 基础作者信息

--- a/package.json
+++ b/package.json
@@ -26,6 +26,11 @@
     "email": "zzq8297729@163.com",
     "url": "https://www.jonhuu.com"
   },
+  "homepage": "https://www.jonhuu.com/",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/tec8297729/npmBase"
+  },
   "files": [
     "build"
   ],
