--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "react-dom": ">=16.8.0"
   },
   "devDependencies": {
-    "@babel/core": "7.12.10",
+    "@babel/core": "7.12.13",
     "@babel/plugin-proposal-class-properties": "^7.12.1",
     "@babel/plugin-proposal-export-namespace-from": "^7.12.1",
     "@babel/plugin-proposal-function-sent": "^7.12.1",
@@ -63,13 +63,13 @@
     "@babel/plugin-transform-runtime": "^7.12.10",
     "@babel/plugin-transform-template-literals": "^7.12.1",
     "@babel/polyfill": "7.12.1",
-    "@babel/preset-env": "7.12.11",
-    "@babel/preset-react": "7.12.10",
-    "@babel/preset-typescript": "7.12.7",
-    "@types/react": "17.0.0",
+    "@babel/preset-env": "7.12.13",
+    "@babel/preset-react": "7.12.13",
+    "@babel/preset-typescript": "7.12.13",
+    "@types/react": "17.0.1",
     "@types/react-dom": "17.0.0",
-    "@typescript-eslint/eslint-plugin": "4.14.0",
-    "autoprefixer": "10.2.3",
+    "@typescript-eslint/eslint-plugin": "4.15.0",
+    "autoprefixer": "10.2.4",
     "babel-eslint": "10.1.0",
     "babel-loader": "8.2.2",
     "bundle-dts": "1.1.4",
@@ -77,11 +77,11 @@
     "compression-webpack-plugin": "7.1.2",
     "copy-webpack-plugin": "7.0.0",
     "cross-env": "7.0.3",
-    "css-loader": "5.0.1",
-    "eslint": "7.18.0",
+    "css-loader": "5.0.2",
+    "eslint": "7.19.0",
     "eslint-config-airbnb": "18.2.1",
     "eslint-config-airbnb-base": "14.2.1",
-    "eslint-config-airbnb-typescript": "12.0.0",
+    "eslint-config-airbnb-typescript": "12.3.1",
     "eslint-config-prettier": "7.2.0",
     "eslint-formatter-pretty": "4.0.0",
     "eslint-plugin-babel": "5.3.1",
@@ -93,27 +93,27 @@
     "eslint-plugin-promise": "4.2.1",
     "eslint-plugin-react": "7.22.0",
     "eslint-plugin-react-hooks": "4.2.0",
-    "eslint-plugin-unicorn": "26.0.1",
+    "eslint-plugin-unicorn": "27.0.0",
     "filemanager-webpack-plugin": "3.1.0",
     "friendly-errors-webpack-plugin": "1.7.0",
-    "html-webpack-plugin": "5.0.0-beta.1",
-    "less": "4.1.0",
-    "less-loader": "7.3.0",
-    "mini-css-extract-plugin": "1.3.4",
-    "postcss": "8.2.4",
+    "html-webpack-plugin": "5.0.0",
+    "less": "4.1.1",
+    "less-loader": "8.0.0",
+    "mini-css-extract-plugin": "1.3.6",
+    "postcss": "8.2.5",
     "postcss-flexbugs-fixes": "5.0.2",
-    "postcss-loader": "4.2.0",
+    "postcss-loader": "5.0.0",
     "postcss-normalize": "9.0.0",
     "postcss-preset-env": "6.7.0",
-    "regenerator-runtime": "0.13.3",
+    "regenerator-runtime": "0.13.7",
     "rimraf": "3.0.2",
     "terser-webpack-plugin": "5.1.1",
-    "ts-loader": "8.0.14",
+    "ts-loader": "8.0.16",
     "typescript": "4.1.3",
     "uglifyjs-webpack-plugin": "2.2.0",
-    "webpack": "5.17.0",
+    "webpack": "5.21.2",
     "webpack-bundle-analyzer": "4.4.0",
-    "webpack-cli": "4.4.0",
+    "webpack-cli": "4.5.0",
     "webpack-dev-server": "3.11.2",
     "webpack-merge": "5.7.3",
     "webpackbar": "5.0.0-3"
