--- a/package.json
+++ b/package.json
@@ -6,16 +6,12 @@
     "registry": "https://registry-npm.kaikeba.com/"
   },
   "scripts": {
-    "start": "npm run dev",
-    "dev": "cross-env BUILD_ENV=dev webpack serve",
-    "build": "rimraf build && npm run build:prod && npm run build:win",
-    "build:watch": "cross-env BUILD_ENV=prod TYPE_ENV=link webpack --watch",
-    "build:link": "cross-env BUILD_ENV=prod TYPE_ENV=link webpack",
-    "build:prod": "cross-env BUILD_ENV=prod webpack",
-    "build:win": "cross-env BUILD_ENV=win webpack",
-    "build:ana": "cross-env ANA_TYPE=true BUILD_ENV=prod webpack",
-    "prepublish": "npm run build:prod",
-    "tags": "git tag v0.0.1 && git push origin --tags"
+    "build": "rollup -c rollup.config.js",
+    "build:watch": "father build --watch",
+    "doc:dev": "father doc dev",
+    "doc:build": "father doc build",
+    "doc:deploy": "father doc deploy",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "main": "./build/index.js",
   "module": "./build/index.js",
@@ -43,41 +39,36 @@
     ]
   },
   "peerDependencies": {
+    "@ant-design/icons": ">=4.0.0",
+    "antd": ">=4.2.0",
     "react": ">=16.8.0",
-    "react-dom": ">=16.8.0"
+    "react-dom": ">=16.8.0",
+    "react-router-dom": ">-5.0.0"
+  },
+  "dependencies": {
+    "@babel/runtime": "^7.12.18",
+    "@kkb/oj-editor": "^0.0.8",
+    "@types/lodash-es": "^4.17.4",
+    "@types/query-string": "^6.3.0",
+    "classnames": "^2.2.6",
+    "father": "^2.30.1",
+    "lodash-es": "^4.17.20",
+    "query-string": "^6.14.0",
+    "react-viewer": "^3.2.2"
   },
   "devDependencies": {
-    "@babel/core": "7.12.13",
-    "@babel/plugin-proposal-class-properties": "^7.12.1",
-    "@babel/plugin-proposal-export-namespace-from": "^7.12.1",
-    "@babel/plugin-proposal-function-sent": "^7.12.1",
-    "@babel/plugin-proposal-numeric-separator": "^7.12.7",
-    "@babel/plugin-proposal-throw-expressions": "^7.12.1",
-    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/plugin-syntax-import-meta": "^7.10.4",
-    "@babel/plugin-transform-arrow-functions": "^7.12.1",
-    "@babel/plugin-transform-async-to-generator": "^7.12.1",
-    "@babel/plugin-transform-destructuring": "^7.12.1",
-    "@babel/plugin-transform-react-jsx": "^7.12.12",
-    "@babel/plugin-transform-regenerator": "^7.12.1",
-    "@babel/plugin-transform-runtime": "^7.12.10",
-    "@babel/plugin-transform-template-literals": "^7.12.1",
-    "@babel/polyfill": "7.12.1",
-    "@babel/preset-env": "7.12.13",
-    "@babel/preset-react": "7.12.13",
-    "@babel/preset-typescript": "7.12.13",
-    "@types/react": "17.0.1",
-    "@types/react-dom": "17.0.0",
-    "@typescript-eslint/eslint-plugin": "4.15.0",
-    "autoprefixer": "10.2.4",
-    "babel-eslint": "10.1.0",
-    "babel-loader": "8.2.2",
-    "bundle-dts": "1.1.4",
-    "clean-webpack-plugin": "3.0.0",
-    "compression-webpack-plugin": "7.1.2",
-    "copy-webpack-plugin": "7.0.0",
-    "cross-env": "7.0.3",
-    "css-loader": "5.0.2",
+    "@ant-design/icons": "^4.5.0",
+    "@babel/plugin-syntax-jsx": "^7.12.13",
+    "@babel/plugin-transform-react-jsx": "^7.12.17",
+    "@babel/preset-env": "^7.12.17",
+    "@babel/preset-react": "^7.12.13",
+    "@rollup/plugin-babel": "^5.3.0",
+    "@rollup/plugin-commonjs": "^17.1.0",
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-node-resolve": "^11.2.0",
+    "@types/classnames": "^2.2.11",
+    "@types/react-router-dom": "^5.1.7",
+    "antd": "^4.12.3",
     "eslint": "7.19.0",
     "eslint-config-airbnb": "18.2.1",
     "eslint-config-airbnb-base": "14.2.1",
@@ -94,32 +85,12 @@
     "eslint-plugin-react": "7.22.0",
     "eslint-plugin-react-hooks": "4.2.0",
     "eslint-plugin-unicorn": "27.0.0",
-    "filemanager-webpack-plugin": "3.1.0",
-    "friendly-errors-webpack-plugin": "1.7.0",
-    "html-webpack-plugin": "5.0.0",
-    "less": "4.1.1",
-    "less-loader": "8.0.0",
-    "mini-css-extract-plugin": "1.3.6",
-    "postcss": "8.2.5",
-    "postcss-flexbugs-fixes": "5.0.2",
-    "postcss-loader": "5.0.0",
-    "postcss-normalize": "9.0.0",
-    "postcss-preset-env": "6.7.0",
-    "regenerator-runtime": "0.13.7",
-    "rimraf": "3.0.2",
-    "terser-webpack-plugin": "5.1.1",
-    "ts-loader": "8.0.16",
-    "typescript": "4.1.3",
-    "uglifyjs-webpack-plugin": "2.2.0",
-    "webpack": "5.21.2",
-    "webpack-bundle-analyzer": "4.4.0",
-    "webpack-cli": "4.5.0",
-    "webpack-dev-server": "3.11.2",
-    "webpack-merge": "5.7.3",
-    "webpackbar": "5.0.0-3"
-  },
-  "dependencies": {
-    "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "postcss": "^8.2.6",
+    "react-router-dom": "^5.2.0",
+    "rollup": "^2.39.0",
+    "rollup-plugin-postcss": "^4.0.0",
+    "rollup-plugin-typescript2": "^0.30.0",
+    "tslib": "^2.1.0",
+    "typescript": "^4.1.5"
   }
 }
