--- a/package.json
+++ b/package.json
@@ -6,16 +6,16 @@
     "registry": "https://registry-npm.kaikeba.com/"
   },
   "scripts": {
-    "build": "rollup -c rollup.config.js",
+    "build": "father build",
     "build:watch": "father build --watch",
     "doc:dev": "father doc dev",
     "doc:build": "father doc build",
-    "doc:deploy": "father doc deploy",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "father test",
+    "test:cov": "father test --coverage"
   },
-  "main": "./build/index.js",
-  "module": "./build/index.js",
-  "types": "./build/index.d.ts",
+  "main": "./dist/index.js",
+  "module": "./dist/index.esm.js",
+  "types": "./dist/index.d.ts",
   "keywords": [],
   "author": {
     "name": "tec",
@@ -28,7 +28,7 @@
     "url": "https://github.com/tec8297729/npmBase"
   },
   "files": [
-    "build"
+    "dist"
   ],
   "license": "ISC",
   "lint-staged": {
@@ -46,29 +46,21 @@
     "react-router-dom": ">-5.0.0"
   },
   "dependencies": {
-    "@babel/runtime": "^7.12.18",
-    "@kkb/oj-editor": "^0.0.8",
-    "@types/lodash-es": "^4.17.4",
-    "@types/query-string": "^6.3.0",
-    "classnames": "^2.2.6",
-    "father": "^2.30.1",
-    "lodash-es": "^4.17.20",
-    "query-string": "^6.14.0",
-    "react-viewer": "^3.2.2"
+    "@babel/runtime": "7.12.18",
+    "@kkb/oj-editor": "0.0.8",
+    "@types/lodash-es": "4.17.4",
+    "@types/query-string": "6.3.0",
+    "classnames": "2.2.6",
+    "lodash-es": "4.17.20",
+    "query-string": "6.14.0",
+    "react-viewer": "3.2.2"
   },
   "devDependencies": {
-    "@ant-design/icons": "^4.5.0",
-    "@babel/plugin-syntax-jsx": "^7.12.13",
-    "@babel/plugin-transform-react-jsx": "^7.12.17",
-    "@babel/preset-env": "^7.12.17",
-    "@babel/preset-react": "^7.12.13",
-    "@rollup/plugin-babel": "^5.3.0",
-    "@rollup/plugin-commonjs": "^17.1.0",
-    "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^11.2.0",
-    "@types/classnames": "^2.2.11",
-    "@types/react-router-dom": "^5.1.7",
-    "antd": "^4.12.3",
+    "@ant-design/icons": "4.5.0",
+    "@types/classnames": "2.2.11",
+    "@types/react-router-dom": "5.1.7",
+    "antd": "4.12.3",
+    "dumi": "^1.1.4",
     "eslint": "7.19.0",
     "eslint-config-airbnb": "18.2.1",
     "eslint-config-airbnb-base": "14.2.1",
@@ -85,12 +77,8 @@
     "eslint-plugin-react": "7.22.0",
     "eslint-plugin-react-hooks": "4.2.0",
     "eslint-plugin-unicorn": "27.0.0",
-    "postcss": "^8.2.6",
-    "react-router-dom": "^5.2.0",
-    "rollup": "^2.39.0",
-    "rollup-plugin-postcss": "^4.0.0",
-    "rollup-plugin-typescript2": "^0.30.0",
-    "tslib": "^2.1.0",
-    "typescript": "^4.1.5"
+    "father-build": "^1.19.1",
+    "react-router-dom": "5.2.0",
+    "typescript": "4.1.5"
   }
 }
