--- a/.gitignore
+++ b/.gitignore
@@ -4,13 +4,15 @@
 /node_modules
 /.pnp
 .pnp.js
-
+**/.umi/**
+**/.umi-production/**
 # testing
 /coverage
 
 # production
 /build
 /dist
+/docs
 .docz/
 
 # misc
