--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   "scripts": {
     "build": "father build",
     "build:watch": "father build --watch",
-    "doc:dev": "father doc dev",
-    "doc:build": "father doc build",
+    "doc:dev": "dumi dev",
+    "doc:build": "dumi build",
     "test": "father test",
     "test:cov": "father test --coverage"
   },
@@ -40,7 +40,7 @@
   },
   "peerDependencies": {
     "@ant-design/icons": ">=4.0.0",
-    "antd": ">=4.2.0",
+    "antd": ">=4.8.0",
     "react": ">=16.8.0",
     "react-dom": ">=16.8.0",
     "react-router-dom": ">-5.0.0"
@@ -78,6 +78,7 @@
     "eslint-plugin-react-hooks": "4.2.0",
     "eslint-plugin-unicorn": "27.0.0",
     "father-build": "^1.19.1",
+    "prettier": "^2.2.1",
     "react-router-dom": "5.2.0",
     "typescript": "4.1.5"
   }
