--- a/package.json
+++ b/package.json
@@ -85,6 +85,8 @@
     "eslint-plugin-unicorn": "27.0.0",
     "father-build": "^1.19.1",
     "husky": "^5.0.9",
+    "prettier": "^2.2.1",
+    "pretty-quick": "^3.1.0",
     "react-router-dom": "5.2.0",
     "typescript": "4.1.5",
     "vcm-cli": "^1.0.5"
