--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "build": "father-build",
     "doc:dev": "dumi dev",
     "doc:build": "dumi build",
-    "test": "father test",
-    "test:cov": "father test --coverage"
+    "jest": "jest",
+    "test": "father-build test",
+    "test:cov": "father-build test --coverage"
   },
   "main": "./dist/index.js",
   "module": "./dist/index.esm.js",
@@ -55,12 +56,13 @@
     "react-router-dom": ">=5.0.0"
   },
   "dependencies": {
+    "@babel/runtime": "7.12.18",
     "classnames": "2.2.6"
   },
   "devDependencies": {
     "@ant-design/icons": "4.5.0",
-    "@babel/runtime": "7.12.18",
     "@types/classnames": "2.2.11",
+    "@types/jest": "^26.0.20",
     "@types/react-router-dom": "5.1.7",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
     "@typescript-eslint/parser": "^4.15.1",
@@ -85,6 +87,7 @@
     "eslint-plugin-unicorn": "27.0.0",
     "father-build": "^1.19.1",
     "husky": "^5.0.9",
+    "jest": "^26.6.3",
     "prettier": "^2.2.1",
     "pretty-quick": "^3.1.0",
     "react-router-dom": "5.2.0",
