--- a/package.json
+++ b/package.json
@@ -6,13 +6,12 @@
     "registry": "https://registry-npm.kaikeba.com/"
   },
   "scripts": {
-    "dev": "father-build --watch",
-    "build": "father-build",
+    "dev": "father build --watch",
+    "build": "father build",
     "doc:dev": "dumi dev",
     "doc:build": "dumi build",
-    "jest": "jest",
-    "test": "father-build test",
-    "test:cov": "father-build test --coverage"
+    "test": "father test",
+    "test:cov": "father test --coverage"
   },
   "main": "./dist/index.js",
   "module": "./dist/index.esm.js",
@@ -35,6 +34,18 @@
     "dist"
   ],
   "license": "ISC",
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not op_mini all"
+  ],
+  "sideEffects": [
+    "dist/*",
+    "src/style/*",
+    "src/**/style/*",
+    "es/**/style/*",
+    "lib/**/style/*"
+  ],
   "husky": {
     "hooks": {
       "pre-commit": "pretty-quick --staged",
@@ -62,13 +73,16 @@
   "devDependencies": {
     "@ant-design/icons": "4.5.0",
     "@types/classnames": "2.2.11",
+    "@types/enzyme": "^3.10.8",
     "@types/jest": "^26.0.20",
     "@types/react-router-dom": "5.1.7",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
     "@typescript-eslint/parser": "^4.15.1",
     "@typescript-eslint/typescript-estree": "^4.15.1",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.4.1",
     "antd": "4.12.3",
     "dumi": "^1.1.4",
+    "enzyme": "^3.11.0",
     "eslint": "^7.20.0",
     "eslint-config-airbnb": "18.2.1",
     "eslint-config-airbnb-base": "14.2.1",
@@ -85,9 +99,9 @@
     "eslint-plugin-react": "7.22.0",
     "eslint-plugin-react-hooks": "4.2.0",
     "eslint-plugin-unicorn": "27.0.0",
-    "father-build": "^1.19.1",
+    "father": "^2.30.1",
     "husky": "^5.0.9",
-    "jest": "^26.6.3",
+    "jest-cli": "^26.6.3",
     "prettier": "^2.2.1",
     "pretty-quick": "^3.1.0",
     "react-router-dom": "5.2.0",
