--- a/packages/rollup/.gitignore
+++ b/packages/rollup/.gitignore
@@ -4,21 +4,13 @@
 /node_modules
 /.pnp
 .pnp.js
-**/node_modules/**
-**/.umi/**
-**/.umi-production/**
 
 # testing
 /coverage
-**/__snapshots__/**
 
 # production
 /build
-/h5
-/pc
-**/dist/**
-.docz/
-
+/dist
 # misc
 .DS_Store
 .env.local
@@ -30,5 +22,3 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 yarn.lock
-package-lock.json
-lerna-debug.log
